# natural-language-sql

./: .env  README.md  create_tables.py  pyproject.toml  requirements.txt  seed.py  streamlit_file.py
app/: agent.py  database.py  models.py
